src/style.css
/* ... */
.staking-table-profit .staking-table-text {
    max-width: 450px;
}
.xs-body-staking .btn-go {
    text-decoration: none;
    width: 304px;
    margin: 40px auto 0;
}
@media (max-width: 1210px) {
    .staking-tables {
        flex-direction: column;
    }    
    .staking-table-coins {
        margin-right: 0;
        margin-bottom: 50px;
    }    
    
}
@media (max-width: 768px) {
    .staking-table-coins .xs-block, .staking-table-profit .xs-block{
        overflow: auto;
    }
    table {
        table-layout: fixed;
        width: 150%;
    }
    .staking-table-coins .xs-block, .staking-table-profit .xs-block, .xs-body-staking .xs-block, .staking-tier-text  {
        width: 100%;
        width: -moz-available;
        width: -webkit-fill-available;
        width: fill-available;
    }
    .xs-body-staking .btn-go {
        width: 100%;
        width: -moz-available;
        width: -webkit-fill-available;
        width: fill-available;
    }
}

.xs-body-trade {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 300px;
}
.xs-body-trade .xs-block {
    width: 364px;
    padding: 30px;
}
.xs-trade-change {
    display: flex;
    flex-direction: column;    
    color: #fff;
}
.xs-trade-change-top {
    width: 100%;
    width: -moz-available;
    width: -webkit-fill-available;
    width: fill-available;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 29px;
}
.xs-trade-change-top button {
    background: transparent;
    border: none;
    cursor: pointer;
}
::placeholder {
    color: #fff;
}
.xs-trade-change-input {
    position: relative;
    margin-bottom: 20px;
}
.xs-trade-change-input input {
    border: 1px solid #00B682;
    border-radius: 8px;
    font-style: normal;
    font-weight: bold;
    font-size: 14px;
    line-height: 17px;
    color: #FFFFFF;
    background: transparent;
    width: 100%;
    padding: 15.5px 19px;
    outline: none;
    text-align: left;
    padding-left: 20px;
}
select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    border: 0;
    outline: 0;
    font: inherit;
    width: 165px;
    height: 30px;
    padding: 7px 0 6px 10px;
    background: url(img/c-d.svg) no-repeat rgba(196, 196, 196, 0.1);
    background-position: 93%;
    color: white;
    border-radius: 0.25em;
    box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
    cursor: pointer;
    font-size: 14px;
    line-height: 17px;
    border-radius: 8px;
    position: absolute;
    top: 10px;
    left: 200px;
}

select option {
    color: inherit;
    background-color: #2e2e2e;
}

select:focus {
    outline: none;
}

select::-ms-expand {
    display: none;
}
.xs-trade-change-input-xs select {
    width: 90px;
    background-position: 80%;
}
.xs-sale-trade .xs-trade-change-input-xs select {
    width: 70px;
    top: 7px;
}
@media (max-width: 768px) {
    .xs-body-trade .xs-block {
        width: 100%;
        width: -moz-available;
        width: -webkit-fill-available;
        width: fill-available;
    }
    .xs-body-trade {
        margin-bottom: calc(100vw - 51vw);
    }
}
@media screen and (-webkit-min-device-pixel-ratio:0) {
    select,
    textarea,
    input {
        font-size: 16px;
    }
}
.btn:active {
    box-shadow: 0 1px 0 #e88372;
    transform: translateY(3px);
    -webkit-transform: translateY(3px);
    -moz-transform: translateY(3px);
    -ms-transform: translateY(3px);
    -o-transform: translateY(3px);
}
.xs-trade-change-btn {
    width: 150px;
    margin-top: 40px;
    display: flex;
    margin: 40px auto 0;
}
.xs-table-btn {
    width: 130px;
    max-height: 40px;
}
.xs-withdraw-table{
    color: white;
    margin-left: 60px;
}
.xs-stake-btn
{
    margin: 0 auto;
}
.xs-stake-btn-insufficient-balance{
    margin: 0 auto;

    font-size: 12px;
}
.xs-stake-btn-loading
{
    margin: 0 auto;
    width: 300px;
}
.modal
{
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 999;
}
.btn-max
{
    position: absolute;
    width: 50px;
    top: 5px;
    left: 200px;
    color:#FF824B;
    background-color: transparent;
    cursor: pointer;
}
.btn-max-trade
{
    top: 8px;
    left: 140px;
}
.btn-modal
{
    font-size:16px;
    width: 150px;
    margin: 0 auto;
    margin-top:20px;
}
.modal-error
{
    font-size: 24px;
    color: rgb(207, 202, 202);
}
@media screen and (max-width: 1380px) {
    .xs-head {
        padding: 12px 30px;
    }
    footer {
        padding: 0 30px;
    }
}
.xs-sale {
    display: flex;
    padding: 30px;
    flex-direction: row;
    width: 610px;
    background: rgba(37, 40, 51, 0.8);
    border: 1px solid #494949;
    box-sizing: border-box;
    box-shadow: 1px -1px 4px rgba(242, 242, 242, 0.25);
    border-radius: 8px;
    position: relative;
}
.xs-sale-separator {
    opacity: 0.3;
    border: 1px solid rgba(255, 255, 255, 0.26);
    margin: -30px 30px -30px 30px;
}
.xs-trade-action-btn {
    width: 130px;
    margin-top: 40px;
    display: flex;
    margin: 20px auto 0;
}
.xs-loading-text{
    font-style: normal;
    font-weight: bold;
    font-size: 14px;
    color: white;
}

.xs-sale-info {
    min-width: 200px;
}
.xs-sale-start-text{
    margin-bottom: 20px;
}
.xs-sale-trade {
    width: 100%;
}
.xs-sale-trade input{
    margin-bottom: 10px;
    border: 1px solid #00B682;
    border-radius: 8px;
    font-style: normal;
    font-weight: bold;
    font-size: 14px;
    line-height: 17px;
    color: #FFFFFF;
    background: transparent;
    padding: 12px 12px 12px 12px;
    outline:none;
    width: 100%;
}
.xs-sale-load-more-btn {
    width: 125px;
    margin: 0 auto;
}
.xs-body-sale {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 300px;
}
/* ... */

